Add shims to composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.0 || ^3.0.1",
         "wimg/php-compatibility": "*",
-        "sstalle/php7cc": "^1.2"
+        "sstalle/php7cc": "^1.2",
+        "dshafik/php7-mysql-shim": "^0.2.0",
+        "bbrala/php7-ereg-shim": "^1.0"
     },
     "license": "MIT",
     "authors": [
